RESOLVED FIXED174260
REGRESSION(r219194): [GStreamer] http/tests/media/video-redirect.html is failing
https://bugs.webkit.org/show_bug.cgi?id=174260
Summary REGRESSION(r219194): [GStreamer] http/tests/media/video-redirect.html is failing
Charlie Turner
Reported 2017-07-07 10:12:08 PDT
This was some fallout from r219194. The reason was not omitting an extra place we needed to convert URL's to using our internal protocol schema. These workarounds can go away once the upstream bug to be able to set ranks per-element get in.
Attachments
Patch (2.84 KB, patch)
2017-07-07 12:35 PDT, Charlie Turner
no flags
Patch (2.74 KB, patch)
2017-07-10 01:45 PDT, Charlie Turner
no flags
Charlie Turner
Comment 1 2017-07-07 12:35:25 PDT
Carlos Alberto Lopez Perez
Comment 2 2017-07-09 17:35:47 PDT
Comment on attachment 314861 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=314861&action=review > Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:229 > - m_url = URL(URL(), cleanURLString); > + URL cleanURL = URL(URL(), cleanURLString); > + convertToInternalProtocol(cleanURL); > > - if (m_url.protocolIsInHTTPFamily()) > - m_url.setProtocol("webkit+" + url.protocol()); > + m_url = cleanURL; Why using an extra variable cleanURL and not simply doing ... m_url = URL(URL(), cleanURLString); convertToInternalProtocol(m_url); ??
Charlie Turner
Comment 3 2017-07-10 01:45:18 PDT
WebKit Commit Bot
Comment 4 2017-07-10 03:13:50 PDT
Comment on attachment 314969 [details] Patch Clearing flags on attachment: 314969 Committed r219288: <http://trac.webkit.org/changeset/219288>
WebKit Commit Bot
Comment 5 2017-07-10 03:13:52 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.