[GTK] http/tests/media/video-redirect.html is failing https://bugs.webkit.org/show_bug.cgi?id=174260

Patch by Charlie Turner <cturner@igalia.com> on 2017-07-10
Reviewed by Carlos Garcia Campos.

Make sure we're testing new URLs within the same security origin.

Covered by existing tests.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::convertToInternalProtocol): Factor out setting our
internal URL schema.
(WebCore::MediaPlayerPrivateGStreamer::setPlaybinURL): Use the
refactored helper.
(WebCore::MediaPlayerPrivateGStreamer::loadNextLocation): Use
refactored helper to ensure both URLs have the same origin.

Canonical link: https://commits.webkit.org/191131@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219288 268f45cc-cd09-0410-ab3c-d52691b4dbfc